...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentListRequestsActivity">

    <Button
        android:id="@+id/acceptAllAppointmentsButton"
        android:layout_width="115dp"
        android:layout_height="45dp"

        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#9F0101"
...
