...
        android:text="Accepted"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourAppointmentsLabel" />

    <Button
        android:id="@+id/viewRequestedAppointmentsButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Requests"
        android:textSize="11sp"
...
