<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorRegisterActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="297dp"
        android:layout_height="66dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="Doctor Registration"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/teacherFirstNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teacherLastNameField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/teacherEmailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/teacherFirstNameField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/teacherLastNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/teacherEmailField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/teacherPasswordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/teacherPasswordField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Account Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/teacherPhoneField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/teacherPhoneField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/teacherAddressField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/teacherAddressField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="519dp" />

    <Button
        android:id="@+id/goToSpecialties"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:text="Next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>