...
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/doctorEmployeeNumberField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/doctorEmployeeNumberField"
...
