<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="297dp"
        android:layout_height="66dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="User Registration"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/userNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userPasswordField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Account Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/userPhoneField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userLastNameField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/userEmailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userPhoneField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/userAddressField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userAddressField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="511dp" />

    <EditText
        android:id="@+id/userEmailField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/userPasswordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:text="Register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/userLastNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>